Melhorias e criando arquivos na tela

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
   <body>
 
-    <div id="upload"></div>
+    <div id="upload">
+      <div class="step1"></div>
+      <div class="step2"></div>
+    </div>
 
 
     <script src="assets/js/upload.js"></script>
