--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 
     <div id="upload">
       <div class="step1"></div>
-      <div class="step2"></div>
+      <div class="step2 hidden">
+        <div class="title">Uploading</div>
+
+        <ul id="files-list">
+        </ul>
+
+      </div>
     </div>
 
 
