Melhorias nas barras

--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
       <div class="step1"></div>
       <div class="step2 hidden">
         <div class="title">Uploading</div>
+        <a href="#" class="close-import">x</a>
 
-        <ul id="files-list">
-        </ul>
-
+        <ul id="files-list"></ul>
+        <div class="text-center"><a href="#" class="more-files">Importar +</a></div>
       </div>
     </div>
-
 
     <script src="assets/js/upload.js"></script>
     <script type="text/javascript">
